# datascience-playground

./: .gitignore  CONTRIBUTING.md
fclp_example/: main.py  pyproject.toml
fclp_example/notebooks/: .jupyter-databricks-kernel-cache.json  fclp_example.py  jij_knapsack_example.py
vrp-with-claude-code/: .gitignore  delete_tai_runs.py  main.py  pyproject.toml
vrp-with-claude-code/instances/f-n135-k7/data/: README.md  f-n135-k7.sol
vrp-with-claude-code/instances/f-n135-k7/experiments/exp001/: README.md  config.yaml  exp001.ipynb
vrp-with-claude-code/instances/f-n45-k4/data/: README.md  f-n45-k4.sol
vrp-with-claude-code/instances/f-n45-k4/results/: exp001_results.json  exp002_results.json  exp003_results.json  experiment_results.json
vrp-with-claude-code/instances/facility-location/src/: facility_mip.py  facility_utils.py  facility_visualization.py
vrp-with-claude-code/instances/tai100a/data/: README.md  tai100a.vrp
vrp-with-claude-code/instances/tai150a/data/: README.md  tai150a.vrp
vrp-with-claude-code/instances/tai385/data/: README.md  tai385.vrp
vrp-with-claude-code/instances/tai75a/data/: README.md  tai75a.vrp
vrp-with-claude-code/instances/tsp/: debug_mip_solutions.py  log_tsp_to_databricks.py
vrp-with-claude-code/instances/tsp/exp002/: exp003_very_large_instances.py
vrp-with-claude-code/instances/tsp/src/: tsp_mip.py  tsp_ortools.py  tsp_utils.py  tsp_visualization.py
vrp-with-claude-code/mlruns/0/: meta.yaml
vrp-with-claude-code/scripts/: delete_mlflow_runs.py
vrp-with-claude-code/src/: __init__.py  log_to_mlflow.py  visualization.py
(+75 files in other folders)
