[project]
name = "vrp-with-claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "highspy>=1.11.0",
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mip>=1.15.0",
    "mlflow>=3.3.2",
    "numpy>=2.3.3",
    "ortools>=9.14.6206",
    "pulp>=3.2.2",
]
